Fixed product page on mobile; Made product page real flex box

--- a/styles/custom.less
+++ b/styles/custom.less
@@ -220,6 +220,8 @@ img {
 
 .ProductList-grid {
   position: relative !important;
+  display: flex;
+  flex-wrap: wrap;
   z-index: 1;
 }
 
@@ -227,6 +229,8 @@ img {
   -webkit-box-shadow: 0px 0px 7px 1px rgba(0,0,0,0.11);
   -moz-box-shadow: 0px 0px 7px 1px rgba(0,0,0,0.11);
   box-shadow: 0px 0px 7px 1px rgba(0,0,0,0.11);
+
+  margin: 0 30px 40px 0;
 }
 
 .ProductList-overlay {
@@ -326,6 +330,10 @@ img {
   .ProductList-filter-list {
     height: 0;
     opacity: 0;
+  }
+
+  .ProductList-item {
+    width: 100% !important;
   }
 
 
